--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  <img src="https://i.postimg.cc/4dLfZk2L/1-6.jpg" alt="paletools.jpg" style="max-width: 100%; height: auto;">
 </div>
 
-<h2> <a href="https://itsharryluis.github.io/pika/">Exploring the Unique Content Offerings of Pikashow Compared to Other Streaming Platforms</a></h2>
+<h2> <a href="https://paletools.bitbucket.io/">Explore the Key Features of PaleTools for FIFA Players</a></h2>
 
 <h2 class="mb-2 mt-6 text-lg first:mt-3">What is PaleTools Market Automation?</h2>
 <p>PaleTools Market Automation is a powerful feature designed to simplify and enhance the player trading experience in FIFA Ultimate Team. By automating repetitive tasks, players can focus on strategic decision-making and team building instead. This tool is crucial for players who want to maximize their efficiency in the transfer market while minimizing the time spent on mundane trading tasks.</p>
