--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
  <meta name="robots" content="index,follow"> 
   <link rel="canonical" href="https://paletools.netlify.app">
-  
+<meta name="google-site-verification" content="HfoCsLYquDVZrPMkJ_er0AIeNST7XkQyZHlsUh3XGL4" />
+ 
   <style>
     body {
       font-family: Arial, sans-serif;
